[gd_scene load_steps=5 format=1]

[ext_resource path="res://resources/bullets/PowerBall.gd" type="Script" id=1]
[ext_resource path="res://graphics/bullets/powerball_small.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource/name = "fly"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 1, 2 ] }

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 3.0

[node name="Bullet" type="RigidBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 0.0
damp_override/angular = 0.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fly = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fly"

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 5, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 5, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="KillTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( 5, 2.38419e-07 )
transform/scale = Vector2( 0.4, 0.4 )
rect = Rect2( -10, -10, 20, 20 )

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]

[connection signal="exit_screen" from="Visibility" to="." method="_on_Visibility_exit_screen"]


